--- a/index.html
+++ b/index.html
@@ -1,209 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Coming Soon — Buildo Reborn</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GTPS25 Host Setup</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    :root{
-      --bg1:#0f0f1f;
-      --bg2:#1a0033;
-      --accent1:#5865f2;
-      --accent2:#7b4ef5;
-      --card:#ffffff;
-      --muted:#666;
-    }
+    .fade-in { animation: fadeIn 0.8s ease-in-out; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px);} to { opacity: 1; transform: translateY(0);} }
 
-    /* Page / hero */
-    html,body{height:100%;margin:0;font-family:Inter, "Segoe UI", Arial, sans-serif;background:linear-gradient(135deg,var(--bg1),var(--bg2));color:#fff}
-    .center {
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:24px;
+    /* Overlay */
+    #formOverlay {
+      display:none; position:fixed; inset:0;
+      background:rgba(0,0,0,0.8); z-index:9999;
+      align-items:center; justify-content:center;
+      padding:20px;
     }
-    .card-hero{
-      text-align:center;
-      max-width:960px;
-      width:100%;
+    .modal {
+      width:min(420px,100%); background:#fff; color:#222;
+      border-radius:12px; box-shadow:0 12px 40px rgba(0,0,0,0.45);
+      padding:22px 18px; max-height:90vh; overflow:auto;
     }
-    h1{
-      margin:0 0 6px;
-      font-size:2.6rem;
-      color:#00ccff;
-      text-shadow:0 0 18px rgba(0,204,255,0.12);
+    .modal h2{margin:0 0 12px;text-align:center;color:#3b2a9b}
+    .modal label{display:block;margin-top:12px;font-weight:600;font-size:0.9rem}
+    .modal input,.modal textarea{
+      width:100%;padding:10px;border-radius:8px;border:1px solid #ddd;
+      margin-top:6px; font-size:14px; box-sizing:border-box;
     }
-    p.lead{margin:0 0 18px;color:#d0cfe8;font-size:1.05rem}
-
-    /* Buttons */
-    .actions{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:10px}
-    .btn{
-      display:inline-flex;align-items:center;gap:10px;
-      padding:12px 18px;border-radius:10px;text-decoration:none;font-weight:700;
-      color:#fff;border:0;cursor:pointer;
-      box-shadow:0 8px 20px rgba(0,0,0,0.35);
-    }
-    .btn-discord{background:linear-gradient(90deg,#5865f2,#4e5d94)}
-    .btn-apply{background:linear-gradient(90deg,#7b4ef5,#5f3dc4)}
-
-    /* Overlay & modal */
-    #formOverlay{
-      display:none;
-      position:fixed;inset:0;
-      background:rgba(0,0,0,0.65);
-      align-items:center;justify-content:center;
-      z-index:9999;padding:20px;
-    }
-    .modal{
-      width:min(420px,100%);
-      background:var(--card);
-      color:#222;
-      border-radius:12px;
-      box-shadow:0 12px 40px rgba(0,0,0,0.45);
-      padding:20px 18px;
-      max-height:92vh;
-      overflow:auto;
-    }
-    .modal h2{
-      margin:0 0 10px;text-align:center;color:#3b2a9b;
-    }
-    .muted{color:var(--muted);font-size:0.95rem}
-
-    form label{display:block;margin-top:12px;font-weight:600;color:#333;font-size:0.95rem}
-    input[type="text"],
-    input[type="email"],
-    textarea{
-      width:100%;
-      padding:10px 12px;
-      margin-top:6px;
-      border-radius:8px;
-      border:1px solid #e6e6e9;
-      font-size:14px;
-      box-sizing:border-box;
-      resize:vertical;
-    }
-    input:focus, textarea:focus{outline:none;border:1px solid #6b53e8;box-shadow:0 4px 18px rgba(107,83,232,0.12)}
-
-    /* roles: grid of small cards for each checkbox */
-    .checkbox-grid{
-      margin-top:8px;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
-      gap:8px;
-    }
-    .role-item{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      padding:8px 10px;
-      border-radius:8px;
-      background:#fbfbfd;
-      border:1px solid #f0eef6;
-      cursor:pointer;
-      user-select:none;
-      transition:box-shadow .12s,transform .08s;
-    }
-    .role-item input{transform:scale(1.1);margin:0}
-    .role-item:hover{box-shadow:0 6px 18px rgba(50,40,130,0.08);transform:translateY(-2px)}
-
-    /* buttons inside modal */
+    .checkbox-grid{margin-top:8px;display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:8px}
+    .role-item{display:flex;align-items:center;gap:8px;background:#f8f8fc;padding:8px;border-radius:8px;cursor:pointer}
     .modal .actions-modal{display:flex;gap:10px;margin-top:16px}
-    .modal .primary{
-      flex:1;background:linear-gradient(90deg,var(--accent1),var(--accent2));color:#fff;border:0;padding:10px 12px;border-radius:8px;font-weight:700;cursor:pointer;
-    }
-    .modal .secondary{
-      background:#efefef;color:#333;border:0;padding:10px 12px;border-radius:8px;cursor:pointer;font-weight:700;
-    }
-    .modal .secondary:hover{background:#e0e0e0}
-
-    /* small screens tweaks */
-    @media (max-width:420px){
-      h1{font-size:2rem}
-      .modal{padding:16px}
-      label{font-size:0.9rem}
-    }
+    .modal button{flex:1;padding:10px;border-radius:8px;font-weight:700;cursor:pointer}
+    .primary{background:linear-gradient(90deg,#5865f2,#7b4ef5);color:#fff;border:0}
+    .secondary{background:#ddd;color:#222;border:0}
   </style>
 </head>
-<body>
-  <div class="center">
-    <div class="card-hero">
-      <h1>COMING SOON</h1>
-      <p class="lead">We’re launching on Discord first — join the server and apply to help run the community.</p>
+<body class="bg-gray-950 text-white min-h-screen font-sans transition-all">
 
-      <div class="actions">
-        <a class="btn btn-discord" href="https://discord.gg/WHBd6PG7q3" target="_blank" rel="noopener">
-          Join Our Discord
-        </a>
-
-        <button class="btn btn-apply" type="button" onclick="openForm()">Apply Now</button>
-      </div>
-    </div>
+  <!-- Toast -->
+  <div id="toast" class="fixed bottom-5 right-5 bg-green-600 text-white px-4 py-2 rounded shadow-lg hidden z-50">
+    ✅ Copied!
   </div>
 
-  <!-- Form overlay -->
-  <div id="formOverlay" aria-hidden="true">
-    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="appFormTitle">
-      <h2 id="appFormTitle">Application Form</h2>
+  <!-- Header -->
+  <header class="bg-gray-900 w-full py-4 md:py-6 shadow-md mb-10">
+    <div class="max-w-4xl mx-auto px-4 md:px-6 text-center">
+      <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
+        🌐 GTPS25 Host Setup
+      </h1>
+      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Clem on Discord!</p>
 
-      <!-- NOTE: this posts directly to your Gmail via FormSubmit -->
+      <!-- Buttons -->
+      <div class="flex justify-center gap-4 mt-4">
+        <a href="https://discord.gg/WHBd6PG7q3" target="_blank"
+           class="bg-indigo-600 hover:bg-indigo-700 px-5 py-2 rounded font-semibold shadow-md">💬 Join Discord</a>
+        <button onclick="openForm()"
+           class="bg-purple-600 hover:bg-purple-700 px-5 py-2 rounded font-semibold shadow-md">📋 Apply Now</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Main Content -->
+  <main class="max-w-4xl mx-auto px-4 md:px-6 grid gap-6 fade-in">
+
+    <!-- Download Section -->
+    <section class="bg-gray-800 p-6 rounded-lg shadow-md text-center">
+      <h2 class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
+        ⬇️ Download Android Host File
+      </h2>
+      <a id="downloadBtn" href="#" download="gtps25_hosts.txt"
+         class="bg-blue-600 hover:bg-blue-700 transition-all px-6 py-3 rounded-full inline-block font-medium">
+        📄 Download Host File
+      </a>
+    </section>
+
+    <!-- Vhost APK Download -->
+    <section class="text-center">
+      <a href="vhost.apk" download
+         class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold px-5 py-3 rounded transition-all inline-block">
+       📲 Download Virtual Hosts APK
+      </a>
+      <p class="text-sm text-gray-400 mt-2">Size: ~2.3MB • Requires Android 5.0+</p>
+    </section>
+
+    <!-- Platform Blocks -->
+    <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+      <!-- Power Tunnel -->
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-3">⚙️ Power Tunnel Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Click to copy Power Tunnel URL</div>
+        <textarea id="PtunnelText" class="hidden" readonly>https://growsoft.cc/android.txt</textarea>
+        <button onclick="copyText('PtunnelText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">📋 Copy</button>
+      </div>
+
+      <!-- macOS Host -->
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-3">🍏 macOS Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Copy macOS host entries for your system</div>
+        <textarea id="macText" class="hidden" readonly>
+91.134.85.13 growtopia1.com
+91.134.85.13 growtopia2.com
+91.134.85.13 www.growtopia1.com
+91.134.85.13 www.growtopia2.com</textarea>
+        <button onclick="copyText('macText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">📋 Copy</button>
+      </div>
+
+      <!-- Windows Host -->
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-3">🪟 Windows Host</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Copy Windows host entries to clipboard</div>
+        <textarea id="windowsText" class="hidden" readonly>
+91.134.85.13 growtopia1.com
+91.134.85.13 growtopia2.com
+91.134.85.13 www.growtopia1.com
+91.134.85.13 www.growtopia2.com</textarea>
+        <button onclick="copyText('windowsText')" class="w-full md:w-auto mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">📋 Copy</button>
+      </div>
+
+      <!-- iOS Host -->
+      <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
+        <h2 class="text-xl font-semibold mb-3">📱 iOS Host Link</h2>
+        <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Tap to copy iOS config</div>
+        <textarea id="iosText" class="hidden" readonly>
+[General]
+bypass-system = true
+
+[Rule]
+FINAL,DIRECT
+
+[Host]
+growtopia1.com = 91.134.85.13
+growtopia2.com = 91.134.85.13
+www.growtopia1.com = 91.134.85.13
+www.growtopia2.com = 91.134.85.13
+RvLnd.here = 91.134.85.13</textarea>
+        <button onclick="copyText('iosText')" class="w-full md:w-auto mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">📋 Copy</button>
+      </div>
+
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="mt-12 text-center text-sm text-gray-500 pb-6">
+    &copy; Created By Clem. All rights reserved.
+  </footer>
+
+  <!-- Apply Form Overlay -->
+  <div id="formOverlay">
+    <div class="modal">
+      <h2>Application Form</h2>
       <form action="https://formsubmit.co/harriepoonin2@gmail.com" method="POST">
-        <!-- 1 -->
-        <label for="fullName">1. What’s your discord name?</label>
-        <input id="fullName" name="Full Name" type="text" placeholder="Enter your full name" required>
+        <label>1. Full Name</label>
+        <input type="text" name="Full Name" required>
 
-        <!-- 2 -->
-        <label for="emailAddr">2. What’s your email?</label>
-        <input id="emailAddr" name="Email" type="email" placeholder="example@mail.com" required>
+        <label>2. Email</label>
+        <input type="email" name="Email" required>
 
-        <!-- 3 Roles -->
-        <label>3. Which role(s) are you applying for?</label>
-        <div class="checkbox-grid" role="group" aria-label="Roles to apply for">
-          <label class="role-item" for="role-coowner">
-            <input id="role-coowner" type="checkbox" name="Roles[]" value="Co-Owner">
-            <span>Co-Owner</span>
-          </label>
-
-          <label class="role-item" for="role-promoter">
-            <input id="role-promoter" type="checkbox" name="Roles[]" value="Promoter">
-            <span>Promoter</span>
-          </label>
-
-          <label class="role-item" for="role-manager">
-            <input id="role-manager" type="checkbox" name="Roles[]" value="Manager">
-            <span>Manager</span>
-          </label>
-
-          <label class="role-item" for="role-discord">
-            <input id="role-discord" type="checkbox" name="Roles[]" value="Discord Manager">
-            <span>Discord Manager</span>
-          </label>
-
-          <label class="role-item" for="role-event">
-            <input id="role-event" type="checkbox" name="Roles[]" value="Event Manager">
-            <span>Event Manager</span>
-          </label>
+        <label>3. Roles (choose any)</label>
+        <div class="checkbox-grid">
+          <label class="role-item"><input type="checkbox" name="Roles[]" value="Co-Owner"> Co-Owner</label>
+          <label class="role-item"><input type="checkbox" name="Roles[]" value="Promoter"> Promoter</label>
+          <label class="role-item"><input type="checkbox" name="Roles[]" value="Manager"> Manager</label>
+          <label class="role-item"><input type="checkbox" name="Roles[]" value="Discord Manager"> Discord Manager</label>
+          <label class="role-item"><input type="checkbox" name="Roles[]" value="Event Manager"> Event Manager</label>
         </div>
 
-        <!-- 4 -->
-        <label for="experience">4. Do you have any experience related to this role?</label>
-        <textarea id="experience" name="Experience" placeholder="Tell us briefly about your past experience" rows="3"></textarea>
+        <label>4. Experience</label>
+        <textarea name="Experience" rows="3"></textarea>
 
-        <!-- 5 -->
-        <label for="why">5. Why should we choose you?</label>
-        <textarea id="why" name="Why Choose Me" placeholder="Explain why you'd be a great fit" rows="3" required></textarea>
+        <label>5. Why should we choose you?</label>
+        <textarea name="Why Choose Me" rows="3" required></textarea>
 
-        <!-- 6 -->
-        <label for="hours">6. How many hours per week can you dedicate?</label>
-        <input id="hours" name="Availability" type="text" placeholder="e.g. 5–10 hours" required>
+        <label>6. Availability (hours per week)</label>
+        <input type="text" name="Availability" required>
 
-        <!-- FormSubmit hidden fields -->
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://tesing2.github.io/Buildoweb.host/thankyou.html">
+        <input type="hidden" name="_next" value="https://tesing2.github.io/GTPS25/thankyou.html">
 
-        <!-- Buttons -->
         <div class="actions-modal">
-          <button type="submit" class="primary">Submit Application</button>
+          <button type="submit" class="primary">Submit</button>
           <button type="button" class="secondary" onclick="closeForm()">Close</button>
         </div>
       </form>
@@ -211,31 +187,29 @@
   </div>
 
   <script>
-    const overlay = document.getElementById('formOverlay');
+    // Downloadable host file content
+    const downloadContent = `91.134.85.13 growtopia1.com
+91.134.85.13 growtopia2.com
+91.134.85.13 www.growtopia1.com
+91.134.85.13 www.growtopia2.com`;
+    document.getElementById("downloadBtn").href = URL.createObjectURL(new Blob([downloadContent],{type:"text/plain"}));
 
-    function openForm(){
-      overlay.style.display = 'flex';
-      overlay.setAttribute('aria-hidden','false');
-      document.body.style.overflow = 'hidden';
-      // focus first input for accessibility
-      setTimeout(()=> document.getElementById('fullName').focus(), 120);
+    // Copy text helper
+    function copyText(id){
+      const textArea=document.getElementById(id);
+      navigator.clipboard.writeText(textArea.value).then(()=>showToast()).catch(err=>console.error(err));
+    }
+    function showToast(){
+      const toast=document.getElementById("toast");
+      toast.classList.remove("hidden");
+      setTimeout(()=>toast.classList.add("hidden"),2000);
     }
 
-    function closeForm(){
-      overlay.style.display = 'none';
-      overlay.setAttribute('aria-hidden','true');
-      document.body.style.overflow = '';
-    }
-
-    // close on ESC
-    window.addEventListener('keydown', (e)=>{
-      if(e.key === 'Escape' && overlay.style.display === 'flex') closeForm();
-    });
-
-    // close when clicking outside modal
-    overlay.addEventListener('click', (e)=>{
-      if(e.target === overlay) closeForm();
-    });
+    // Form overlay
+    const overlay=document.getElementById("formOverlay");
+    function openForm(){overlay.style.display="flex";document.body.style.overflow="hidden";}
+    function closeForm(){overlay.style.display="none";document.body.style.overflow="";}
   </script>
+
 </body>
 </html>
